# SimpleRenderEngineProject

./: CMakeLists.txt
GameProgramming24/Exercise4/Engine/Engine/: CircleCollider.cpp  CircleCollider.h  Component.cpp  Component.h  GameObject.cpp  GameObject.h  Logger.h  MyEngine.cpp  MyEngine.h
GameProgramming24/Exercise4/ExampleGame/: CMakeLists.txt  SceneGraphParser.h  main.cpp
GameProgramming24/Exercise4/ExampleGame/Game/: ComponentAsteroid.cpp  ComponentAsteroid.h  ComponentController.cpp  ComponentController.h  ComponentLargeAsteroid.cpp  ComponentLargeAsteroid.h  ComponentLaser.cpp  ComponentLaser.h  ComponentMediumAsteroid.cpp  ComponentMediumAsteroid.h  ComponentRendererSprite.cpp  ComponentRendererSprite.h  ComponentSmallAsteroid.cpp  ComponentSmallAsteroid.h  Utils.cpp  Utils.h
GameProgramming24/Exercise4/ExampleGame/data/: AsteroidsScene.json  asteroids.json
GameProgramming24/Exercise6/Engine/: CMakeLists.txt
GameProgramming24/Exercise6/Engine/Engine/: GameObject.cpp  GameObject.h  MyEngine.cpp
GameProgramming24/Exercise6/ExampleGame/: main.cpp
GameProgramming24/Exercise6/ExampleGame/Game/: ComponentController.cpp  ComponentController.h  ComponentLevelLayout.cpp  ComponentLevelLayout.h  ComponentRendererMesh.cpp  ComponentRendererMesh.h
GameProgramming24/Exercise6/ExampleGame/data/: scene.json
GameProgramming24/Exercise8/Engine/Engine/: MyEngine.cpp  MyEngine.h
GameProgramming24/Exercise8/ExampleGame/Game/: ComponentController.cpp  ComponentController.h
GameProgramming24/Exercise8/ExampleGame/data/: scene.json
project/: box2d-example.cpp
(+1 files in other folders)
